fix scroll trang QL hoc sinh

--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -272,7 +272,7 @@ select {
 }
 
 .student-table {
-  width: 97%;
+  width: 96%;
   border-radius: 12px;
   overflow: hidden;
   border: 1px solid #ddd;
@@ -309,6 +309,15 @@ select {
 
 .actions button:hover {
   background-color: #ececec;
+}
+.table-wrapper {
+  max-height: 330px;
+  overflow: auto;
+}
+.student-table thead th {
+  position: sticky;
+  top: 0;
+  z-index: 1;
 }
 
 /*/Ql lịch học/*/
