--- a/Admin/admin.css
+++ b/Admin/admin.css
@@ -688,6 +688,9 @@ select {
   flex-direction: column;
   gap: 15px;
   padding: 0 20px;
+  
+  max-height: 330px;
+  overflow: auto;
 }
 
 .listevent {
